results/SVCOMP/specgen/log-StringValueOf06-2024_03_03_07_27_50.txt
public class StringValueOf06 {
    //@ requires integerValue == 77;
    //@ ensures \result <==> tmp.equals("77");
    public static boolean f(int integerValue) {
        String tmp = String.valueOf(integerValue);
        return tmp.equals("77");
    }
}
/home/max/Documents/JMLGPT/tmp/StringValueOf06.java:3: error: cannot find symbol
    //@ ensures \result <==> tmp.equals("77");
                             ^
  symbol:   variable tmp
  location: class StringValueOf06
1 error

public class StringValueOf06 {
    //@ requires integerValue == 77;
    //@ ensures \result <==> String.valueOf(integerValue).equals("77");
    public static boolean f(int integerValue) {
        return String.valueOf(integerValue).equals("77");
    }
}

